# ChangeLog for dev-libs/gmetadom
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmetadom/ChangeLog,v 1.19 2006/08/07 09:52:00 liquidx Exp $

  07 Aug 2006; Alastair Tse <liquidx@gentoo.org> gmetadom-0.2.3.ebuild:
  stable bump for x86

  03 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> gmetadom-0.2.3.ebuild:
  Stable on sparc

  21 Apr 2006; Thomas Cort <tcort@gentoo.org> gmetadom-0.2.3.ebuild:
  Added ~alpha keyword wrt Bug #110858.

  21 Feb 2006; Aron Griffis <agriffis@gentoo.org> gmetadom-0.2.3.ebuild:
  Mark 0.2.3 ~ia64

*gmetadom-0.2.3 (24 Dec 2005)

  24 Dec 2005; MATSUU Takuto <matsuu@gentoo.org>
  +files/gmetadom-0.2.3-gcc41.patch, +files/gmetadom-0.2.3-gentoo.patch,
  +gmetadom-0.2.3.ebuild:
  Version bumped.
  Fixed for gcc 4.1, Bug 115918.

  31 Oct 2005; Brent Baude <ranger@gentoo.org> gmetadom-0.2.2-r1.ebuild:
  marking gmetadom-0.2.2-r1 in support of bug 110858

  31 Oct 2005; Jason Wever <weeve@gentoo.org> gmetadom-0.2.2-r1.ebuild:
  Added ~sparc keyword wrt bug #110858.

*gmetadom-0.2.2-r1 (12 Feb 2005)

  12 Feb 2005; MATSUU Takuto <matsuu@gentoo.org>
  +files/gmetadom-0.2.2-gentoo.patch, +gmetadom-0.2.2-r1.ebuild:
  Fixed emerge fails with libtool mismatch. Bug 81569.

  03 Jan 2005; MATSUU Takuto <matsuu@gentoo.org> -gmetadom-0.2.0.ebuild,
  -gmetadom-0.2.1-r1.ebuild, -gmetadom-0.2.1.ebuild:
  Version bumped.
  Removed old versions.

*gmetadom-0.2.1-r2 (30 Aug 2004)

  30 Aug 2004; Guy Martin <gmsoft@gentoo.org> +gmetadom-0.2.1-r2.ebuild:
  Unconditonal use of -fPIC (#55238).

  03 Aug 2004; David Holm <dholm@gentoo.org> gmetadom-0.2.1-r1.ebuild:
  Added to ~ppc.

*gmetadom-0.2.1-r1 (30 Jul 2004)

  30 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> +gmetadom-0.2.1-r1.ebuild:
  Fixed ocaml bindings problem. Bug#56682.

*gmetadom-0.2.1 (21 Jan 2004)

  21 Jan 2004; MATSUU Takuto <matsuu@gentoo.org> gmetadom-0.2.1.ebuild:
  Version bumped.
  Added ocaml to IUSE.
