@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/link-grammar-4.2.2.ebuild,v 1.2 2006/08/03 18:28:51 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/link-grammar-4.2.2.ebuild,v 1.3 2006/08/16 18:53:32 corsair Exp $
 
 DESCRIPTION=" The Link Grammar Parser is a syntactic parser of English, based on
 link grammar, an original theory of English syntax."
@@ -9,7 +9,7 @@ SRC_URI="http://www.abisource.com/downloads/link-grammar/${PV}/${P}.tar.gz"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ppc64 sparc ~x86"
 IUSE=""
 
 #broken make files :-/
