@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gmetadom
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmetadom/ChangeLog,v 1.19 2006/08/07 09:52:00 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmetadom/ChangeLog,v 1.20 2006/08/16 18:51:30 corsair Exp $
+
+  16 Aug 2006; Markus Rothe <corsair@gentoo.org> gmetadom-0.2.3.ebuild:
+  Stable on ppc64; bug #144120
 
   07 Aug 2006; Alastair Tse <liquidx@gentoo.org> gmetadom-0.2.3.ebuild:
   stable bump for x86
